# coconote

./: .dependency-cruiser.cjs  .gitignore  .graphifyignore  CLAUDE.md  Makefile  README.md  biome.json  package-lock.json  package.json  tsconfig.json  vitest.config.mjs
electron/: builder.config.json  lifecycle.js  mac_postprocess.cjs  main.js  package-lock.json  package.json  preload.cjs
introduction/: .test1.json  .test2.json  content.md  editor.md  file.md  history.md  markdown.md  pdf.md  server.md  setting.md  welcome.md  wikilink.md
mcp/: README.md  package-lock.json  package.json  tsconfig.json
server-rs/: Cargo.toml  build.rs
server-rs/.cargo/: config.toml
server-rs/src/: body_scan.rs  boundary.rs  config.rs  error.rs  frontmatter.rs  history.rs  lib.rs  meta.rs  orphan.rs  router.rs  state.rs  types.rs  util.rs  watch.rs
server-rs/src/boot/: history.rs  mod.rs  space.rs
server-rs/src/config/: defaults.rs  mod.rs  paths.rs  tests.rs
server-rs/src/handlers/: auth.rs  collab.rs  config.rs  fs.rs  health.rs  history.rs  mod.rs  resolve.rs  ssr.rs
server-rs/src/handlers/collab/: checkpoint.rs  merge.rs  mod.rs  protocol.rs  tests.rs
server-rs/src/handlers/config/: apply.rs  mod.rs  persist.rs
server-rs/src/handlers/fs/: asset.rs  headers.rs  mod.rs  read.rs  tests.rs  write.rs
server-rs/src/history/: blobs.rs  mod.rs  prune.rs  retention.rs  scope.rs  store.rs  tests.rs  types.rs  versions.rs
server-rs/src/resolver/: mod.rs  relocate.rs  scan.rs  tests.rs
server-rs/src/space/: disk.rs  embed.rs  mod.rs  multiroot.rs  readonly.rs  scan.rs
(+368 files in other folders)
